# 0.00.21 (56538) Sep 13, 2011
9/13/11 adjust layout of "Real Molecules" play area
9/13/11 adjust layout of "Two Atoms" play area, based on molecule location
9/13/11 adjust layout of "Three Atoms" play area, based on molecule location
9/13/11 use double arrows to indicate dragging direction for changing bond angle
9/13/11 transform the shape of the bond angle indicator to point in the correct direction
9/13/11 move bond angle indicator to front on mouse over
9/13/11 merge MoveToFrontHandler into BondAngleHandler
9/13/11 bug fix in BondAngleHandler
9/13/11 first pass at bond angle drag indicators (visibility behavior is correct, shape is wrong)
9/13/11 center layout of stuff in "Real Molecules" tab
9/13/11 fix horizontal spacing of cells in EN table
9/13/11 refactor control panel nodes into a base class
9/13/11 create a class for each module's control panel, to simplify canvas code
9/13/11 change request: make all floating control panels the same width, looks better
9/13/11 turn off all mouse features except "rotate" in the Jmol viewer
9/13/11 scale Jmol dipoles by 0.8, so the molecular dipole isn't clipped by the Jmol viewer
9/13/11 swap EN values for atoms in diatomic molecule, so that turning on E-field is more likely to result in animation
9/13/11 make Jmol viewer as large as possible
9/13/11 adjust layout of "Real Molecules" play area
9/13/11 permanently remove E-field features from "Real Molecules" tab
# 0.00.20 (56383) Sep 10, 2011
9/8/11 decrease perpendicular offset of 2D bond dipoles
# 0.00.19 (56333) Sep 8, 2011
9/8/11 join clipped cloud shapes at center of bond in 2D electrostatic potential
9/8/11 temporarily hide E-field features in "Real Molecules" tab, for interview version
9/8/11 factor out duplicate code in DiatomicElectrostaticPotentialNode.updatePaint
9/8/11 set correct endpoints for gradient in 2D electrostatic potential
9/8/11 add Bond.getLength, useful in 2D isosurface computations