@@ -10,11 +10,11 @@ USER_CHARGES
 
 
 @<TRIPOS>ATOM
-    1   C          0.000000000     0.000000000     0.508880522     C.3   1  M0001    0.100550
-    2   F1        -1.109124829     0.000000000    -0.279924737       F   1  M0001   -0.159942
-    3   F2         1.109124829     0.000000000    -0.279924737       F   1  M0001   -0.159942
-    4   H2         0.000000000    -0.909431633     1.120073924       H   1  M0001    0.109667
-    5   H1         0.000000000     0.909431633     1.120073924       H   1  M0001    0.109667
+    1   C          0.000000000     0.508880377     0.000000000     C.3   1  M0001    0.100550
+    2   F1        -0.849638760    -0.279924721     0.712931573       F   1  M0001   -0.159942
+    3   F2         0.849638760    -0.279924721    -0.712931573       F   1  M0001   -0.159942
+    4   H2         0.584571302     1.120073795     0.696664989       H   1  M0001    0.109667
+    5   H1        -0.584571302     1.120073795    -0.696664989       H   1  M0001    0.109667
 
 
 @<TRIPOS>BOND
