@@ -10,11 +10,11 @@ USER_CHARGES
 
 
 @<TRIPOS>ATOM
-    1   C          0.000000000     0.000000000     0.628889981     C.3   1  M0001   -0.230517
-    2   F          0.000000000     0.000000000    -0.754349486       F   1  M0001   -0.166365
-    3   H1         1.032880901     0.000000000     0.997171243       H   1  M0001    0.132320
-    4   H2        -0.516440450     0.894501115     0.997171243       H   1  M0001    0.132281
-    5   H3        -0.516440450    -0.894501115     0.997171243       H   1  M0001    0.132281
+    1   C          0.000000000    -0.544634581     -0.314444929     C.3   1  M0001   -0.230517
+    2   F          0.000000000     0.653285682      0.377174675       F   1  M0001   -0.166365
+    3   H3         0.894500911    -0.605355263     -0.945836067       H   1  M0001    0.132320
+    4   H2         0.000000022    -1.380015731      0.395915449       H   1  M0001    0.132281
+    5   H1        -0.894500971    -0.605355263     -0.945836067       H   1  M0001    0.132281
 
 
 @<TRIPOS>BOND
