@@ -10,11 +10,11 @@ USER_CHARGES
 
 
 @<TRIPOS>ATOM
-    1   C          0.000000000     0.000000000     0.471084213     C.3   1  M0001   -0.025406
-    2   Cl1        1.705662780     0.000000000    -0.067122716      Cl   1  M0001   -0.052513
-    3   Cl2       -0.852831390    -1.477147271    -0.067122716      Cl   1  M0001   -0.052227
-    4   Cl2       -0.852831390     1.477147271    -0.067122716      Cl   1  M0001   -0.052227
-    5   H          0.000000000     0.000000000     1.556696597       H   1  M0001    0.182373
+    1   C          0.000000000     0.426947296     0.199088797     C.3   1  M0001   -0.025406
+    2   Cl3        1.679749846     0.064339414    -0.296802193      Cl   1  M0001   -0.052513
+    3   Cl2       -0.583371043    -0.738205731     1.424261451      Cl   1  M0001   -0.052227
+    4   Cl1       -1.096378803     0.491364837    -1.212561131      Cl   1  M0001   -0.052227
+    5   H          0.000000000     1.410846233     0.657888472       H   1  M0001    0.182373
 
 
 @<TRIPOS>BOND
