@@ -10,11 +10,11 @@ USER_CHARGES
 
 
 @<TRIPOS>ATOM
-    1   C          0.000000000     0.000000000     0.338383767     C.3   1  M0001    0.282658
-    2   F1         1.257790333     0.000000000    -0.129111197       F   1  M0001   -0.135111
-    3   F2        -0.628895167    -1.089278363    -0.129111197       F   1  M0001   -0.135350
-    4   F3        -0.628895167     1.089278363    -0.129111197       F   1  M0001   -0.135350
-    5   H          0.000000000     0.000000000     1.431213754       H   1  M0001    0.123152
+    1   C          0.000000000     0.326853573     0.087580159     C.3   1  M0001    0.282658
+    2   F3         1.089278340     0.038058206    -0.640882492       F   1  M0001   -0.135111
+    3   F2         0.000000019    -0.450251907     1.181515455       F   1  M0001   -0.135350
+    4   F1        -1.089278340     0.038058192    -0.640882373       F   1  M0001   -0.135350
+    5   H          0.000000000     1.382446170     0.370425344       H   1  M0001    0.123152
 
 
 @<TRIPOS>BOND
