@@ -10,10 +10,10 @@ USER_CHARGES
 
 
 @<TRIPOS>ATOM
-    1   N          0.000000000     0.000000000     0.146422323     N.3   1  M0001   -1.009460
-    2   H2         0.938714647     0.000000000    -0.251207307       H   1  M0001    0.337416
-    3   H3        -0.469357297    -0.812950706    -0.251207307       H   1  M0001    0.336022
-    4   H1        -0.469357297     0.812950706    -0.251207307       H   1  M0001    0.336022
+    1   N          0.000000000  0.126805440  0.073211156     N.3   1  M0001   -1.009460
+    2   H3         0.812950611  0.017126748 -0.532078981       H   1  M0001    0.337416
+    3   H2         0.000000004 -0.686909199  0.687346876       H   1  M0001    0.336022
+    4   H1        -0.812950611  0.017126746 -0.532078862       H   1  M0001    0.336022
 
 
 @<TRIPOS>BOND
